# PDF2PPT

./: .gitignore  Agent_Doc.md  index.html  pyproject.toml  script.js  styles.css
artifacts/: diag_action_system_summary_v4.json  diag_palantir_summary.json  implementation_plan.md  pdf_to_ppt_cli_spec.md  task.md  task_list.md  technical_lessons.md
backend/: README.md  cli.py  create_templates.py  gemini_login.py  pdf2ppt_cli.py  pyproject.toml  verify_gemini_oauth.py
backend/app/: main.py
backend/app/core/: config.py  models.py  supabase.py
backend/app/services/: auth_service.py  fidelity_service.py  llm_service.py  mineru_runner.py  mineru_service.py  parser_service.py  ppt_gen_service.py
backend/scripts/: hello.py  parse_pdf.py
backend/tests/: test_cli.py  test_fidelity_score.py  test_layout_audits.py  test_main.py  test_mineru_service.py  test_parser.py  test_ppt_gen.py  test_real_pipeline.py
docs/: global_testing_rules.md
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/[...path]/: route.ts
lessons/: openclaw_fidelity_lessons.md
